@@ -4,6 +4,7 @@ PHP                                                                        NEWS
 - Upgraded PCRE to version 7.8 (Ilia)
 
 - Fixed memory leak inside readline_callback_handler_remove() function. (Felipe)
+- Fixed bug #46673 (stream_lock call with wrong paramater). (Arnaud)
 - Fixed bug #46649 (Setting array element with that same array produces 
   inconsistent results). (Arnaud)
 - Fixed bug #46626 (mb_convert_case does not handle apostrophe correctly).
